src/test/ui/issues/issue-34209.stderr
error: no variant `B` in enum `S`
  --> $DIR/issue-34209.rs:7:12
   |
LL | enum S {
   | ------ variant `B` not found here
...
LL |         S::B {} => {},
   |            ^ help: there is a variant with a similar name: `A`

error: aborting due to previous error

